# server-less

./: CHANGELOG.md  CLAUDE.md  CONTEXT_DECISIONS.md  CONTEXT_INTEGRATION.md  CONTEXT_STATUS.md  CONTEXT_SUMMARY.md  Cargo.toml  LICENSE  POLISH.md  README.md  ROADMAP.md  TODO.md  flake.nix
.claude/: settings.json
.github/workflows/: ci.yml
crates/server-less/: Cargo.toml  README.md
crates/server-less-core/: Cargo.toml  README.md
crates/server-less-core/src/: config.rs  error.rs  extract.rs  lib.rs
crates/server-less-macros/: Cargo.toml  README.md
crates/server-less-macros/src/: app.rs  asyncapi.rs  capnp.rs  cli.rs  config_cmd.rs  config_derive.rs  connect.rs  context.rs  error.rs  graphql.rs  graphql_enum.rs  graphql_input.rs  grpc.rs  health.rs  http.rs  jsonrpc.rs  jsonschema.rs  lib.rs  markdown.rs  mcp.rs  openapi.rs  openapi_gen.rs  openrpc.rs  program.rs  rpc_preset.rs  server.rs  server_attrs.rs  smithy.rs  thrift.rs  tool.rs  ws.rs
crates/server-less-openapi/: Cargo.toml  README.md
crates/server-less-openapi/src/: builder.rs  error.rs  lib.rs  types.rs
crates/server-less-parse/: Cargo.toml  README.md
crates/server-less-parse/src/: lib.rs
crates/server-less-rpc/: Cargo.toml  README.md
crates/server-less-rpc/src/: lib.rs
crates/server-less/examples/: cli_advanced.rs  cli_manual.rs  cli_service.rs  error_handling.rs  http_service.rs  mount_service.rs  openapi_composition.rs  param_service.rs  program_preset.rs  rpc_preset.rs  server_preset.rs  streaming_service.rs  tool_preset.rs  user_service.rs  ws_service.rs
crates/server-less/src/: lib.rs
crates/server-less/tests/: asyncapi_tests.rs  capnp_tests.rs  cli_tests.rs  compile_fail.rs  connect_tests.rs  context_tests.rs  e2e_tests.rs  error_tests.rs  graphql_tests.rs  group_tests.rs  grpc_tests.rs  http_roundtrip_tests.rs  http_tests.rs  jsonrpc_tests.rs  jsonschema_tests.rs  markdown_tests.rs  mcp_tests.rs  openapi_tests.rs  openrpc_tests.rs  polish_tests.rs  program_tests.rs  rpc_preset_tests.rs  serve_tests.rs  server_tests.rs  smithy_tests.rs  thrift_tests.rs  tool_tests.rs  ws_tests.rs
crates/server-less/tests/fixtures/: await_without_async.rs  await_without_async.stderr  cli_about_rename.rs  cli_about_rename.stderr  cli_empty_impl.rs  cli_empty_impl.stderr  cli_global_without_sink.rs  cli_global_without_sink.stderr  cli_on_non_impl.rs  cli_on_non_impl.stderr  cli_param_matches_global.rs  cli_param_matches_global.stderr  cli_reserved_flag_collision.rs  cli_reserved_flag_collision.stderr  cli_reserved_flag_collision_slug.rs  cli_reserved_flag_collision_slug.stderr  cli_wrong_type_str_arg.rs  cli_wrong_type_str_arg.stderr  duplicate_route.rs  duplicate_route.stderr  graphql_input_non_named_fields.rs  graphql_input_non_named_fields.stderr  group_without_registry.rs  group_without_registry.stderr  http_empty_impl.rs  http_empty_impl.stderr  http_generic_impl.rs  http_generic_impl.stderr  http_on_struct.rs  http_on_struct.stderr  http_wrong_type_bool_arg.rs  http_wrong_type_bool_arg.stderr  http_wrong_type_str_arg.rs  http_wrong_type_str_arg.stderr  invalid_cli_attribute.rs  invalid_cli_attribute.stderr  invalid_http_arg.rs  invalid_http_arg.stderr  invalid_param_attribute.rs  invalid_param_attribute.stderr  (+16 more)
crates/trellis/: Cargo.toml
crates/trellis-core/: Cargo.toml
crates/trellis-core/src/: error.rs  extract.rs  lib.rs
crates/trellis-macros/: Cargo.toml
crates/trellis-macros/src/: asyncapi.rs  capnp.rs  cli.rs  connect.rs  error.rs  graphql.rs  grpc.rs  http.rs  jsonrpc.rs  jsonschema.rs  lib.rs  markdown.rs  mcp.rs  openrpc.rs  parse.rs  python.rs  rpc.rs  serve.rs  smithy.rs  thrift.rs  typescript.rs  ws.rs
crates/trellis-parse/: Cargo.toml
crates/trellis-parse/src/: lib.rs
crates/trellis-rpc/: Cargo.toml
crates/trellis-rpc/src/: lib.rs
crates/trellis/examples/: cli_service.rs  http_service.rs  streaming_service.rs  user_service.rs  ws_service.rs
crates/trellis/fixtures/: validated_service.capnp  validated_service.proto  validated_service.thrift
crates/trellis/src/: lib.rs
crates/trellis/tests/: asyncapi_tests.rs  capnp_tests.rs  cli_tests.rs  connect_tests.rs  e2e_tests.rs  error_tests.rs  graphql_tests.rs  grpc_tests.rs  http_tests.rs  jsonrpc_tests.rs  jsonschema_tests.rs  markdown_tests.rs  mcp_tests.rs  openrpc_tests.rs  python_tests.rs  serve_tests.rs  smithy_tests.rs  thrift_tests.rs  typescript_tests.rs  ws_tests.rs
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.ts
docs/artifacts/normalize-cli-docs/: cli-surface.md  schema-flag-wiring.md
docs/design/: app-metadata.md  blessed-presets.md  cli-attributes.md  cli-capability-wiring-invariant.md  cli-manual-projection.md  cli-output-formatting.md  config.md  error-mapping.md  extension-coordination.md  impl-first.md  implementation-notes.md  index.md  inference-vs-configuration.md  iteration-log.md  method-groups.md  mount-points.md  open-questions.md  openapi-composition.md  param-attributes.md  parse-time-coordination.md  protocol-naming.md  route-response-attrs.md
docs/notes/: agnostic-behavioral-metadata.md
docs/tutorials/: README.md  multi-protocol.md  rest-api.md
