[workspace]
resolver = "2"
members = [
    "crates/server-less",
    "crates/server-less-core",
    "crates/server-less-openapi",
    "crates/server-less-parse",
    "crates/server-less-rpc",
    "crates/server-less-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/server-less"
