[workspace]
resolver = "2"
members = [
    "crates/server-less",
    "crates/server-less-core",
    "crates/server-less-openapi",
    "crates/server-less-parse",
    "crates/server-less-rpc",
    "crates/server-less-macros",
]

[workspace.package]
version = "0.2.1-alpha.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/server-less"
homepage = "https://rhi.zone/server-less/"
documentation = "https://docs.rs/server-less"
readme = "README.md"
keywords = ["macros", "derive", "server", "rpc", "openapi"]
categories = ["web-programming", "development-tools::procedural-macro-plugins"]
rust-version = "1.89"

[profile.dev]
debug = 0
