[workspace]
resolver = "2"
members = [
    "crates/server-less",
    "crates/server-less-core",
    "crates/server-less-openapi",
    "crates/server-less-parse",
    "crates/server-less-rpc",
    "crates/server-less-macros",
]

[workspace.package]
version = "0.4.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/server-less"
homepage = "https://rhi.zone/server-less/"
documentation = "https://docs.rs/server-less"
readme = "README.md"
keywords = ["macros", "derive", "server", "rpc", "openapi"]
categories = ["web-programming", "development-tools::procedural-macro-plugins"]
rust-version = "1.89"

[workspace.dependencies]
server-less-core = { path = "crates/server-less-core", version = "0.4.8", default-features = false }
server-less-macros = { path = "crates/server-less-macros", version = "0.4.8", default-features = false }
server-less-openapi = { path = "crates/server-less-openapi", version = "0.4.8" }
server-less-parse = { path = "crates/server-less-parse", version = "0.4.8" }
server-less-rpc = { path = "crates/server-less-rpc", version = "0.4.8" }

[profile.dev]
debug = 0
