[package]
name = "server-less-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for server-less derive macros"

[dependencies]
# Async runtime agnostic
futures-core = "0.3"
futures = { version = "0.3", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP types (framework agnostic)
http = "1"

# Error handling
thiserror = "2"

# WebSocket support (optional)
tokio = { version = "1", features = ["sync"], optional = true }
axum = { version = "0.8", default-features = false, features = ["ws"], optional = true }

# CLI support (optional)
clap = { version = "4", optional = true }
jaq-core = { version = "2", optional = true }
jaq-std = { version = "2", optional = true }
jaq-json = { version = "1", features = ["serde_json"], optional = true }

# JSON Schema generation (optional)
schemars = { version = "1", optional = true }

[features]
cli = ["clap", "jaq-core", "jaq-std", "jaq-json"]
mcp = []
jsonrpc = []
http = ["axum"]
ws = ["futures", "tokio", "axum"]
jsonschema = ["schemars"]
