[package]
name = "server-less-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI composition utilities for server-less"
readme = "README.md"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
