[package]
name = "server-less-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared parsing utilities for server-less proc macros"

[lib]
proc-macro = false

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
