[package]
name = "server-less-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared RPC dispatch utilities for server-less proc macros"
readme = "README.md"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = false

[dependencies]
server-less-parse = { workspace = true }
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
