[package]
name = "trellis-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared RPC dispatch utilities for trellis proc macros"

[lib]
proc-macro = false

[dependencies]
trellis-parse = { path = "../trellis-parse" }
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
