[package]
name = "trellis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Composable derive macros for common Rust patterns"

[dependencies]
trellis-core = { path = "../trellis-core" }
trellis-macros = { path = "../trellis-macros" }

# Re-export common dependencies users will need
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies for generated code
[dependencies.axum]
version = "0.8"
features = ["ws"]
optional = true

[dependencies.clap]
version = "4"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.async-graphql]
version = "7"
optional = true

[dependencies.async-graphql-axum]
version = "7"
optional = true

[features]
default = ["full"]

# Runtime protocols (require external deps)
mcp = []
http = ["axum"]
cli = ["clap"]
ws = ["axum", "futures"]
graphql = ["async-graphql", "async-graphql-axum", "axum"]
jsonrpc = ["axum"]

# Schema generators (no runtime deps, just string generation)
grpc = []
capnp = []
thrift = []

# Specification generators (no runtime deps)
openrpc = []
asyncapi = []

# Documentation generators (no runtime deps)
markdown = []

# All features
full = [
    "mcp", "http", "cli", "ws", "graphql", "jsonrpc",
    "grpc", "capnp", "thrift",
    "openrpc", "asyncapi",
    "markdown"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
trybuild = "1"
axum = { version = "0.8", features = ["ws"] }
clap = "4"
futures = "0.3"
async-graphql = "7"
async-graphql-axum = "7"
