[package]
name = "trellis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Composable derive macros for common Rust patterns"

[dependencies]
trellis-core = { path = "../trellis-core" }
trellis-macros = { path = "../trellis-macros", default-features = false }

# Re-export common dependencies users will need
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies for generated code
[dependencies.axum]
version = "0.8"
features = ["ws"]
optional = true

[dependencies.clap]
version = "4"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.async-graphql]
version = "7"
optional = true

[dependencies.async-graphql-axum]
version = "7"
optional = true

[features]
default = ["full"]

# Runtime protocols (require external deps)
mcp = ["trellis-macros/mcp"]
http = ["trellis-macros/http", "axum"]
cli = ["trellis-macros/cli", "clap"]
ws = ["trellis-macros/ws", "axum", "futures"]
graphql = ["trellis-macros/graphql", "async-graphql", "async-graphql-axum", "axum"]
jsonrpc = ["trellis-macros/jsonrpc", "axum"]

# Schema generators (no runtime deps, just string generation)
grpc = ["trellis-macros/grpc"]
capnp = ["trellis-macros/capnp"]
thrift = ["trellis-macros/thrift"]
connect = ["trellis-macros/connect"]
smithy = ["trellis-macros/smithy"]

# Specification generators (no runtime deps)
openrpc = ["trellis-macros/openrpc"]
asyncapi = ["trellis-macros/asyncapi"]
jsonschema = ["trellis-macros/jsonschema"]

# Documentation generators (no runtime deps)
markdown = ["trellis-macros/markdown"]

# Type stubs (no runtime deps)
typescript = ["trellis-macros/typescript"]
python = ["trellis-macros/python"]

# All features
full = [
    "mcp", "http", "cli", "ws", "graphql", "jsonrpc",
    "grpc", "capnp", "thrift", "connect", "smithy",
    "openrpc", "asyncapi", "jsonschema",
    "markdown",
    "typescript", "python"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
trybuild = "1"
axum = { version = "0.8", features = ["ws"] }
clap = "4"
futures = "0.3"
async-graphql = "7"
async-graphql-axum = "7"
