[package]
name = "rhizome-trellis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Composable derive macros for common Rust patterns"

[dependencies]
rhizome-trellis-core = { path = "../trellis-core" }
rhizome-trellis-macros = { path = "../trellis-macros", default-features = false }

# Re-export common dependencies users will need
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies for generated code
[dependencies.axum]
version = "0.8"
features = ["ws"]
optional = true

[dependencies.clap]
version = "4"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.async-graphql]
version = "7"
optional = true

[dependencies.async-graphql-axum]
version = "7"
optional = true

[features]
default = ["full"]

# Runtime protocols (require external deps)
mcp = ["rhizome-trellis-macros/mcp"]
http = ["rhizome-trellis-macros/http", "axum"]
cli = ["rhizome-trellis-macros/cli", "clap"]
ws = ["rhizome-trellis-macros/ws", "axum", "futures"]
graphql = ["rhizome-trellis-macros/graphql", "async-graphql", "async-graphql-axum", "axum"]
jsonrpc = ["rhizome-trellis-macros/jsonrpc", "axum"]

# Schema generators (no runtime deps, just string generation)
grpc = ["rhizome-trellis-macros/grpc"]
capnp = ["rhizome-trellis-macros/capnp"]
thrift = ["rhizome-trellis-macros/thrift"]
connect = ["rhizome-trellis-macros/connect"]
smithy = ["rhizome-trellis-macros/smithy"]

# Specification generators (no runtime deps)
openrpc = ["rhizome-trellis-macros/openrpc"]
asyncapi = ["rhizome-trellis-macros/asyncapi"]
jsonschema = ["rhizome-trellis-macros/jsonschema"]

# Documentation generators (no runtime deps)
markdown = ["rhizome-trellis-macros/markdown"]

# All features
full = [
    "mcp", "http", "cli", "ws", "graphql", "jsonrpc",
    "grpc", "capnp", "thrift", "connect", "smithy",
    "openrpc", "asyncapi", "jsonschema",
    "markdown"
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
trybuild = "1"
axum = { version = "0.8", features = ["ws"] }
clap = "4"
futures = "0.3"
async-graphql = "7"
async-graphql-axum = "7"
